Fixed alignment bug on nurse-home

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -659,3 +659,29 @@ label:has(~#nurses-with-access) {
         gap: 0.5rem;
     }
 }
+
+#patient-data.nurse-home {
+    grid-template-columns: 1fr 1fr;
+
+    > * {
+        grid-column: 1 / span 2;
+    }
+
+    > :first-child {
+        grid-row: 3;
+    }
+
+    > :nth-child(2) {
+        grid-column: 1;
+        height: fit-content;
+        gap: 0.5rem;
+    }
+
+    > :nth-child(3) {
+        grid-column: 2;
+    }
+}
+
+#patient-data img {
+    width: 8rem;
+}
